password & gender toggle update

--- a/zee5/Resouces/Base.lproj/Main.storyboard
+++ b/zee5/Resouces/Base.lproj/Main.storyboard
@@ -448,13 +448,13 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="By proceeding you agree to our Terms of Use and Privacy Policy." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vnB-H7-nzn">
-                                <rect key="frame" x="20" y="430" width="374" height="14.5"/>
+                                <rect key="frame" x="20" y="430" width="365" height="14.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vOl-Bm-3PS">
-                                <rect key="frame" x="168.5" y="494.5" width="77.5" height="44"/>
+                                <rect key="frame" x="40" y="494.5" width="334" height="44"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="44" id="A9e-nF-7gC"/>
                                 </constraints>
@@ -464,26 +464,37 @@
                                     <action selector="registerButton:" destination="Da8-Ch-7le" eventType="touchUpInside" id="lTf-TI-CU2"/>
                                 </connections>
                             </button>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="mPh-Sb-Xf4" customClass="GenderTableView">
+                                <rect key="frame" x="217" y="319" width="177" height="132"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="132" id="VXD-YI-OOo"/>
+                                    <constraint firstAttribute="width" constant="177" id="Va1-fS-Q4w"/>
+                                </constraints>
+                            </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="SGJ-wL-3iP"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="vnB-H7-nzn" firstAttribute="leading" secondItem="SGJ-wL-3iP" secondAttribute="leading" constant="20" id="1Gj-Rm-Yti"/>
+                            <constraint firstItem="SGJ-wL-3iP" firstAttribute="trailing" secondItem="mPh-Sb-Xf4" secondAttribute="trailing" constant="20" id="6Oq-pt-aVi"/>
                             <constraint firstItem="a4c-K2-NR7" firstAttribute="leading" secondItem="SGJ-wL-3iP" secondAttribute="leading" constant="20" id="6mD-BE-4dd"/>
                             <constraint firstItem="vnB-H7-nzn" firstAttribute="top" secondItem="2FV-H8-USU" secondAttribute="bottom" constant="50" id="BYg-wx-1C9"/>
                             <constraint firstItem="Jb7-73-vY7" firstAttribute="top" secondItem="SGJ-wL-3iP" secondAttribute="top" constant="100" id="BeH-z0-09b"/>
                             <constraint firstItem="vOl-Bm-3PS" firstAttribute="top" secondItem="vnB-H7-nzn" secondAttribute="bottom" constant="50" id="DTv-Jk-ubW"/>
                             <constraint firstItem="2FV-H8-USU" firstAttribute="top" secondItem="a4c-K2-NR7" secondAttribute="bottom" constant="20" id="DsP-yB-JGd"/>
+                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="vnB-H7-nzn" secondAttribute="trailing" constant="20" symbolic="YES" id="RrP-zX-Y0x"/>
                             <constraint firstItem="SGJ-wL-3iP" firstAttribute="trailing" secondItem="a4c-K2-NR7" secondAttribute="trailing" constant="20" id="W91-81-TEe"/>
                             <constraint firstItem="a4c-K2-NR7" firstAttribute="top" secondItem="5Qq-zv-D99" secondAttribute="bottom" constant="20" id="YHk-el-2Tf"/>
                             <constraint firstItem="Jb7-73-vY7" firstAttribute="leading" secondItem="SGJ-wL-3iP" secondAttribute="leading" constant="20" id="YNo-1a-2JS"/>
                             <constraint firstItem="5Qq-zv-D99" firstAttribute="top" secondItem="Jb7-73-vY7" secondAttribute="bottom" constant="20" id="Z6Y-s2-Xwy"/>
-                            <constraint firstItem="vOl-Bm-3PS" firstAttribute="centerX" secondItem="vnB-H7-nzn" secondAttribute="centerX" id="dkp-pv-ptI"/>
+                            <constraint firstItem="vOl-Bm-3PS" firstAttribute="leading" secondItem="TLl-Ny-B95" secondAttribute="leadingMargin" constant="20" id="d7Q-l2-Vqv"/>
                             <constraint firstItem="5Qq-zv-D99" firstAttribute="leading" secondItem="SGJ-wL-3iP" secondAttribute="leading" constant="20" id="fr1-zu-pRh"/>
-                            <constraint firstItem="SGJ-wL-3iP" firstAttribute="trailing" secondItem="vnB-H7-nzn" secondAttribute="trailing" constant="20" id="l01-ho-ZSO"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="vOl-Bm-3PS" secondAttribute="trailing" constant="20" id="fr5-DP-ECb"/>
                             <constraint firstItem="SGJ-wL-3iP" firstAttribute="trailing" secondItem="Jb7-73-vY7" secondAttribute="trailing" constant="20" id="lSx-Ed-vqI"/>
                             <constraint firstItem="2FV-H8-USU" firstAttribute="leading" secondItem="SGJ-wL-3iP" secondAttribute="leading" constant="20" id="nHs-iI-g8e"/>
                             <constraint firstItem="SGJ-wL-3iP" firstAttribute="trailing" secondItem="5Qq-zv-D99" secondAttribute="trailing" constant="20" id="o9c-nj-jBS"/>
+                            <constraint firstItem="mPh-Sb-Xf4" firstAttribute="top" secondItem="SGJ-wL-3iP" secondAttribute="top" constant="275" id="rYw-zp-Awx"/>
                             <constraint firstItem="SGJ-wL-3iP" firstAttribute="trailing" secondItem="2FV-H8-USU" secondAttribute="trailing" constant="20" id="zHh-gP-Pzt"/>
                         </constraints>
                     </view>
@@ -491,6 +502,8 @@
                         <outlet property="dobTextField" destination="HD3-l6-NN6" id="2P7-RJ-B5B"/>
                         <outlet property="emailIDTextField" destination="Jb7-73-vY7" id="5al-cM-jS4"/>
                         <outlet property="firstNameTextField" destination="ebh-lo-L6n" id="tVK-Eh-YtP"/>
+                        <outlet property="genderTableView" destination="mPh-Sb-Xf4" id="dD2-Yh-QEx"/>
+                        <outlet property="genderTableViewHC" destination="VXD-YI-OOo" id="3yl-L6-Emn"/>
                         <outlet property="genderTextField" destination="as4-Cq-X8l" id="Bux-lv-trY"/>
                         <outlet property="lastNameTextField" destination="rkp-Vn-SCe" id="bWj-Zf-CGW"/>
                         <outlet property="setPasswordTextField" destination="2FV-H8-USU" id="Xpg-YW-cU0"/>
@@ -498,7 +511,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x8o-YJ-8tS" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1607" y="1630"/>
+            <point key="canvasLocation" x="1605.7971014492755" y="1629.9107142857142"/>
         </scene>
         <!--Download View Controller-->
         <scene sceneID="7Zl-HG-Vls">
